# mm-bracket-flow

./: .agentrules  .editorconfig  .gitignore  README.md  intuition_config.yaml  optimal_multi_year_weights.txt  phase5_optimal_weights.txt  pyproject.toml  research_log.md  test_hack.py  test_sr.py
.agent/rules/: architecture.md  best_practices.md  interaction.md  standards.md  universal-rules.md
.agent/workflows/: init-session.md  run-bracket.md  setup-project.md
agents/optimization/: best_weights.txt  best_weights_average.txt  best_weights_balanced.txt  best_weights_perfect.txt  checkpoint_average.json  checkpoint_balanced.json  checkpoint_perfect.json  gold_standard.json  heartbeat.json  (+4 more)
core/: config.py  intuition_config.yaml  live_update_handler.py  parser.py  simulator.py  team_model.py
docs/: agent_sync.json  execution_plan.md  gemini_research_prompt.md  optimization_status.txt  research_prompt_user.md  research_status.txt  research_sync.json  upset_analysis.csv
prompts/: optimization_agent.md  supervisor_agent.md  web_agent.md
scripts/: analyze_upsets.py  autonomous_optimizer.py  csv_to_json.py  dual_mode_optimizer.py  evaluate_weights.py  fetch_results.py  fix_historical_structure.py  manager_swarm_monitor.py  mass_backtest.py  monte_carlo.py  optimize_multi_year.py  optimize_weights.py  pause_protocol.sh  populate_results.py  refine_historical_brackets.py  relaunch_optimizer.py  research_sensitivity.py  run_bracket.py  sim_helpers.py  sync_data.py  sync_live_data.py  v2025_tuner.py  validate_data.py
tests/: test_simulator.py
web/: app.py
(+82 files in other folders)
